--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>もみ徳｜口コミアシスタント（男性版）</title>
+  <title>もみ徳｜口コミアシスタント（中性版・ベージュカラー）</title>
   <style>
     :root {
-      --main-color: #64b5f6;
-      --accent-color: #42a5f5;
-      --bg-color: #f0f8ff;
-      --text-color: #333;
-      --light-bg: #e3f2fd;
-      --border-color: #90caf9;
+      --main-color: #f5e6c8;
+      --accent-color: #d2b48c;
+      --bg-color: #fffaf2;
+      --text-color: #5c4433;
+      --light-bg: #fffaf5;
+      --border-color: #e0c8a0;
     }
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
@@ -25,8 +25,8 @@
       font-size: 1rem;
     }
     .top-hero {
-      background: #90caf9;
-      color: #fff;
+      background: var(--main-color);
+      color: var(--text-color);
       padding: 2.5em 1em 1.5em;
       border-radius: 0 0 24px 24px;
     }
@@ -49,7 +49,7 @@
       opacity: 0.95;
     }
     .select-box {
-      background: #fff;
+      background: var(--light-bg);
       border: 2px solid var(--border-color);
       border-radius: 16px;
       max-width: 640px;
@@ -65,7 +65,7 @@
       margin-bottom: 1em;
     }
     .button-orange {
-      background: var(--main-color);
+      background: var(--accent-color);
       color: white;
       border: none;
       padding: 0.8em 1.2em;
@@ -79,7 +79,7 @@
       min-width: 120px;
     }
     .button-orange:hover {
-      background: var(--accent-color);
+      background: #c19a6b;
     }
     #free-input {
       width: calc(100% - 2em);
@@ -87,13 +87,14 @@
       height: 80px;
       padding: 0.7em;
       font-size: 1rem;
-      border: 1px solid #ccc;
+      border: 1px solid var(--border-color);
       border-radius: 10px;
       resize: vertical;
       box-sizing: border-box;
+      background: #fff;
     }
     #output {
-      background: #f5fbff;
+      background: #fff8f0;
       border: 2px dashed var(--accent-color);
       padding: 1em;
       border-radius: 12px;
@@ -102,28 +103,32 @@
       max-width: 600px;
       min-height: 4em;
       font-size: 1rem;
-      color: #444;
+      color: #5c4433;
+    }
+    #review-links {
+      margin-top: 2em;
+    }
+    .badge {
+      background: #f0e0c0;
+      margin: 2px;
+      padding: 4px 8px;
+      border-radius: 8px;
+      display: inline-block;
     }
     select {
       font-size: 1rem;
       padding: 0.6em;
       border-radius: 8px;
       border: 2px solid var(--border-color);
-      background: #e8f4fd;
+      background: #fffaf2;
       width: 80%;
       max-width: 320px;
+      color: var(--text-color);
     }
     select:focus {
       outline: none;
-      border-color: var(--main-color);
-      background: #f0f8ff;
-    }
-    .badge {
-      background: #bbdefb;
-      margin: 2px;
-      padding: 4px 8px;
-      border-radius: 8px;
-      display: inline-block;
+      border-color: var(--accent-color);
+      background: #fff6e8;
     }
   </style>
 </head>
@@ -131,7 +136,7 @@
 
 <div class="top-hero">
   <div class="top-icon">
-    <img src="male.png" alt="男性アイコン">
+    <img src="neutral.png" alt="中性アイコン" />
   </div>
   <h1 class="top-title">口コミアシスタント</h1>
   <div class="top-sub">カンタン操作で、あなたの想いを届けやすく。</div>
@@ -180,25 +185,26 @@
     <button class="button-orange" onclick="copyReview()">コピーする</button>
   </div>
   <div id="output"></div>
-</div>
-
-<div class="select-box">
-  <h2>投稿リンクはこちら</h2>
-  <div class="flex-buttons">
-    <a href="https://www.google.co.jp/search?q=もみ徳姪浜店+クチコミ" target="_blank" class="button-orange">PC・Android</a>
-    <a href="https://www.google.com/gasearch?q=もみ徳姪浜店+レビュー&source=sh/x/gs/m2/5#ebo=1" target="_blank" class="button-orange">iPhone</a>
+  <div id="review-links" style="display:none; margin-top: 2em;">
+    <h2>口コミを投稿する</h2>
+    <div class="flex-buttons">
+      <a href="https://www.google.co.jp/search?q=もみ徳姪浜店+クチコミ" target="_blank" class="button-orange">PC・Android</a>
+      <a href="https://www.google.com/gasearch?q=もみ徳姪浜店+レビュー&source=sh/x/gs/m2/5#ebo=1" target="_blank" class="button-orange">iPhone</a>
+    </div>
+    <p style="font-size: 0.75rem; color: #888; margin-top: 0.5em;">
+      ※iPhoneの方は先に「★（星）」をタップしてください。
+    </p>
   </div>
-  <p style="font-size: 0.75rem; color: #888; margin-top: 0.5em;">※iPhoneの方は先に「★（星）」をタップしてください。</p>
 </div>
 
 <script>
-const naturalPhrases = {
-  "コリに的確": ["ピンポイントで効いた感じがしました。", "狙ったところにしっかり当たって満足です。", "狙い通りの箇所にアプローチしてくれました。"],
-  "力強い": ["圧がしっかりしていて安心感がありました。", "しっかりと深くほぐしてもらえました。", "体の芯に届く感じの圧でした。"],
-  "動作が楽に": ["肩や腰の動きがスムーズになりました。", "可動域が広がった感じがしました。", "施術後、体が軽く感じました。"],
-  "スッキリ": ["頭がスッキリしてリフレッシュできました。", "モヤモヤが取れて爽快感がありました。", "全体的に気分が明るくなりました。"],
-  "丁寧な接客": ["親身な対応で安心感がありました。", "終始リラックスできる接客でした。", "細やかな気配りに感動しました。"],
-  "ワザが凄い": ["技術力の高さを感じました。", "体の状態を見極めた的確な施術でした。", "プロフェッショナルな技術を感じました。"]
+const neutralPhrases = {
+  "コリに的確": ["気になっていたポイントにぴったり届きました。", "コリをしっかり捉えてくれる施術でした。", "必要なところに自然とアプローチしてもらえました。"],
+  "力強い": ["適度な力加減で、安心して受けられました。", "深いところまで無理なくほぐしてもらえました。", "しっかり効かせてくれる心地よい施術でした."],
+  "動作が楽に": ["動きがスムーズになったのを実感しました。", "身体が軽くなったような感覚がありました。", "自然と動きやすさが戻った気がします。"],
+  "スッキリ": ["心も身体もスッと軽くなった気がします。", "施術後、とても爽やかな気分になりました。", "全身がリフレッシュされたように感じました。"],
+  "丁寧な接客": ["一つひとつの対応がとても丁寧で安心できました。", "落ち着いた雰囲気でリラックスできました。", "こちらのペースに合わせたやさしい接客でした。"],
+  "ワザが凄い": ["体に合わせた的確な施術をしてもらえました。", "手技のひとつひとつに熟練の技を感じました。", "自然に体がほぐれていくのがわかりました。"]
 };
 
 const impressionSelect = document.getElementById("impression-select");
@@ -226,11 +232,11 @@ function generateReview() {
   const selected = Array.from(impressionSelect.selectedOptions).map(opt => opt.value);
   const freeText = document.getElementById("free-input")?.value.trim();
   const phrases = selected.map(item => {
-    const list = naturalPhrases[item];
+    const list = neutralPhrases[item];
     return list ? list[Math.floor(Math.random() * list.length)] : item;
   });
 
-  let review = (therapist === "不明" ? "施術を受けました。" : `${therapist}さんに施術をお願いしました。`) + "\n";
+  let review = (therapist === "不明" ? "施術を受けました。" : `${therapist}さんの施術を受けました。`) + "\n";
   review += phrases.join(" ") + "\n";
 
   const outro = {
@@ -254,6 +260,7 @@ function copyReview() {
   if (reviewText) {
     navigator.clipboard.writeText(reviewText).then(() => {
       alert("コピーしました！");
+      document.getElementById("review-links").style.display = "block";
     });
   }
 }
