--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>もみ徳｜口コミアシスタント（男性版）</title>
+  <title>もみ徳｜口コミアシスタント（中性版・ベージュカラー）</title>
   <style>
     :root {
-      --main-color: #64b5f6;
-      --accent-color: #42a5f5;
-      --bg-color: #f0f8ff;
-      --text-color: #333;
-      --light-bg: #e3f2fd;
-      --border-color: #90caf9;
+      --main-color: #f5e6c8;
+      --accent-color: #d2b48c;
+      --bg-color: #fffaf2;
+      --text-color: #5c4433;
+      --light-bg: #fffaf5;
+      --border-color: #e0c8a0;
     }
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
@@ -25,8 +25,8 @@
       font-size: 1rem;
     }
     .top-hero {
-      background: #90caf9;
-      color: #fff;
+      background: var(--main-color);
+      color: var(--text-color);
       padding: 2.5em 1em 1.5em;
       border-radius: 0 0 24px 24px;
     }
@@ -49,7 +49,7 @@
       opacity: 0.95;
     }
     .select-box {
-      background: #fff;
+      background: var(--light-bg);
       border: 2px solid var(--border-color);
       border-radius: 16px;
       max-width: 640px;
@@ -65,10 +65,10 @@
       margin-bottom: 1em;
     }
     .button-orange {
-      background: var(--main-color);
+      background: var(--accent-color);
       color: white;
       border: none;
-      padding: 0.8em 1.5em;
+      padding: 0.8em 1.2em;
       border-radius: 12px;
       font-size: 1rem;
       cursor: pointer;
@@ -79,7 +79,7 @@
       min-width: 120px;
     }
     .button-orange:hover {
-      background: var(--accent-color);
+      background: #c19a6b;
     }
     #free-input {
       width: calc(100% - 2em);
@@ -94,7 +94,7 @@
       background: #fff;
     }
     #output {
-      background: #f5fbff;
+      background: #fff8f0;
       border: 2px dashed var(--accent-color);
       padding: 1em;
       border-radius: 12px;
@@ -103,13 +103,13 @@
       max-width: 600px;
       min-height: 4em;
       font-size: 1rem;
-      color: #444;
+      color: #5c4433;
     }
     #review-links {
       margin-top: 2em;
     }
     .badge {
-      background: #bbdefb;
+      background: #f0e0c0;
       margin: 2px;
       padding: 4px 8px;
       border-radius: 8px;
@@ -120,7 +120,7 @@
       padding: 0.6em;
       border-radius: 8px;
       border: 2px solid var(--border-color);
-      background: #e8f4fd;
+      background: #fffaf2;
       width: 80%;
       max-width: 320px;
       color: var(--text-color);
@@ -128,7 +128,7 @@
     select:focus {
       outline: none;
       border-color: var(--accent-color);
-      background: #f0f8ff;
+      background: #fff6e8;
     }
   </style>
 </head>
@@ -136,14 +136,15 @@
 
 <div class="top-hero">
   <div class="top-icon">
-    <img src="male.png" alt="男性アイコン" />
+    <img src="neutral.png" alt="中性アイコン" />
   </div>
   <h1 class="top-title">口コミアシスタント</h1>
   <div class="top-sub">カンタン操作で、あなたの想いを届けやすく。</div>
 </div>
 
 <div class="select-box">
-  <h2>担当スタッフを選んでください</h2>
+  <h2>スタッフ名</h2>
+  <p style="font-size: 0.85rem; color: #777;">スタッフをお選びください。</p>
   <select id="staff-select">
     <option value="">選択してください</option>
     <option value="横田">横田</option>
@@ -156,7 +157,7 @@
 
 <div class="select-box">
   <h2>施術後に感じたこと</h2>
-  <p style="font-size: 0.85rem; color: #777;">※最大3つまで選択できます</p>
+  <p style="font-size: 0.85rem; color: #777;">※最大3つまで選択できます。</p>
   <select id="impression-select" multiple style="height: 8em;">
     <option value="コリに的確">コリに的確</option>
     <option value="力強い">力強い</option>
@@ -169,7 +170,8 @@
 </div>
 
 <div class="select-box">
-  <h2>口コミの口調を選んでください</h2>
+  <h2>口コミの口調を選ぶ</h2>
+  <p style="font-size: 0.85rem; color: #777;">選んだ口調で口コミが生成されます。</p>
   <select id="tone-select">
     <option value="ですます調" selected>ですます調</option>
     <option value="カジュアル">カジュアル</option>
@@ -180,6 +182,10 @@
 
 <div class="select-box">
   <h2>口コミ作成・コピー</h2>
+  <p style="font-size: 0.85rem; color: #777;">
+    口コミ生成: 自動で口コミを生成します。<br>
+    コピー: コピーを押すと投稿リンクが出現します。
+  </p>
   <div class="flex-buttons">
     <button class="button-orange" onclick="generateReview()">口コミを作成する</button>
     <button class="button-orange" onclick="copyReview()">コピーする</button>
@@ -187,24 +193,24 @@
   <div id="output"></div>
 </div>
 
-<div id="review-links" class="select-box">
+<div id="review-links" class="select-box" style="display:none;">
   <h2>口コミを投稿する</h2>
-  <p style="font-size: 0.85rem; color: #777;">※コピー後にリンクを押して投稿サイトへ移動してください。</p>
+  <p style="font-size: 0.85rem; color: #777;">コピー後に、該当する端末用リンクから投稿できます。</p>
   <div class="flex-buttons">
-    <a href="https://www.google.co.jp/search?q=もみ徳姪浜店+クチコミ" target="_blank" class="button-orange">PC・Android</a>
-    <a href="https://www.google.com/gasearch?q=もみ徳姪浜店+レビュー&source=sh/x/gs/m2/5#ebo=1" target="_blank" class="button-orange">iPhone</a>
+    <a href="https://www.google.co.jp/search?q=もみ徳姪浜店+クチコミ" target="_blank" class="button-orange">Android用</a>
+    <a href="https://www.google.com/gasearch?q=もみ徳姪浜店+レビュー&source=sh/x/gs/m2/5#ebo=1" target="_blank" class="button-orange">iPhone用</a>
   </div>
-  <p style="font-size: 0.75rem; color: #888;">※iPhoneの方は先に「★（星）」をタップしてください。</p>
+  <p style="font-size: 0.75rem; color: #888; margin-top: 0.5em;">※iPhoneの方は先に「★（星）」をタップしてください。</p>
 </div>
 
 <script>
-const malePhrases = {
-  "コリに的確": ["ピンポイントでしっかり効きました。", "狙ったところに的確にアプローチしてくれました。"],
-  "力強い": ["しっかりした圧で深部まで届きました。", "力強さと丁寧さがちょうどよかったです。"],
-  "動作が楽に": ["施術後、動きがスムーズになりました。", "体が軽くなったのを実感しました。"],
-  "スッキリ": ["気分も体もスッキリしました。", "頭がクリアになった感覚がありました。"],
-  "丁寧な接客": ["終始丁寧な対応で安心できました。", "落ち着いた接客でリラックスできました。"],
-  "ワザが凄い": ["細かいところまでしっかりほぐしてくれました。", "技術力の高さを感じる施術でした。"]
+const neutralPhrases = {
+  "コリに的確": ["気になっていたポイントにぴったり届きました。", "コリをしっかり捉えてくれる施術でした。", "必要なところに自然とアプローチしてもらえました。"],
+  "力強い": ["適度な力加減で、安心して受けられました。", "深いところまで無理なくほぐしてもらえました。", "しっかり効かせてくれる心地よい施術でした。"],
+  "動作が楽に": ["動きがスムーズになったのを実感しました。", "身体が軽くなったような感覚がありました。", "自然と動きやすさが戻った気がします。"],
+  "スッキリ": ["心も身体もスッと軽くなった気がします。", "施術後、とても爽やかな気分になりました。", "全身がリフレッシュされたように感じました。"],
+  "丁寧な接客": ["一つひとつの対応がとても丁寧で安心できました。", "落ち着いた雰囲気でリラックスできました。", "こちらのペースに合わせたやさしい接客でした。"],
+  "ワザが凄い": ["体に合わせた的確な施術をしてもらえました。", "手技のひとつひとつに熟練の技を感じました。", "自然に体がほぐれていくのがわかりました。"]
 };
 
 const impressionSelect = document.getElementById("impression-select");
@@ -213,12 +219,11 @@ const impressionDisplay = document.getElementById("impression-display");
 impressionSelect.addEventListener("input", () => {
   const options = Array.from(impressionSelect.options);
   const selected = options.filter(opt => opt.selected);
-
-  if (selected.length > 3) {
-    selected[selected.length - 1].selected = false;
-    alert("最大3つまで選択できます。");
+  if (selected.length >= 3) {
+    options.forEach(opt => { if (!opt.selected) opt.disabled = true; });
+  } else {
+    options.forEach(opt => { opt.disabled = false; });
   }
-
   const values = selected.map(opt => opt.value);
   impressionDisplay.innerHTML = values.length
     ? "選択中：" + values.map(val => `<span class='badge'>${val}</span>`).join("")
@@ -229,12 +234,13 @@ function generateReview() {
   const therapist = document.getElementById("staff-select").value || "不明";
   const tone = document.getElementById("tone-select").value;
   const selected = Array.from(impressionSelect.selectedOptions).map(opt => opt.value);
+  const freeInput = document.getElementById("free-input")?.value.trim();
   const phrases = selected.map(item => {
-    const list = malePhrases[item];
+    const list = neutralPhrases[item];
     return list ? list[Math.floor(Math.random() * list.length)] : item;
   });
 
-  let review = (therapist === "不明" ? "施術を受けました。" : `${therapist}さんに施術をお願いしました。`) + "\n";
+  let review = (therapist === "不明" ? "施術を受けました。" : `${therapist}さんの施術を受けました。`) + "\n";
   review += phrases.join(" ") + "\n";
 
   const outro = {
@@ -246,6 +252,10 @@ function generateReview() {
 
   review += outro;
 
+  if (freeInput) {
+    review += "\n" + freeInput;
+  }
+
   document.getElementById("output").textContent = review;
 }
 
@@ -254,6 +264,7 @@ function copyReview() {
   if (reviewText) {
     navigator.clipboard.writeText(reviewText).then(() => {
       alert("コピーしました！");
+      document.getElementById("review-links").style.display = "block";
     });
   }
 }
