--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
 <div class="select-box">
   <h2>口コミ作成・コピー</h2>
   <p style="font-size: 0.85rem; color: #777;">
-    口コミ生成: 自動で口コミを生成します。<br>
-    コピー: コピーを押すと投稿リンクが出現します。
+    自動で口コミを生成します。<br>
+    コピーを押すと投稿リンクが出現します。
   </p>
   <div class="flex-buttons">
     <button class="button-orange" onclick="generateReview()">口コミを作成する</button>
