--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>もみ徳｜口コミアシスタント（中性版・ベージュカラー）</title>
+  <title>もみ徳｜口コミアシスタント（男性版・ブルーカラー）</title>
   <style>
     :root {
-      --main-color: #f5e6c8;
-      --accent-color: #d2b48c;
-      --bg-color: #fffaf2;
-      --text-color: #5c4433;
-      --light-bg: #fffaf5;
-      --border-color: #e0c8a0;
+      --main-color: #64b5f6;
+      --accent-color: #42a5f5;
+      --bg-color: #f0f8ff;
+      --text-color: #333;
+      --light-bg: #e3f2fd;
+      --border-color: #90caf9;
     }
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
@@ -79,22 +79,10 @@
       min-width: 120px;
     }
     .button-orange:hover {
-      background: #c19a6b;
-    }
-    #free-input {
-      width: calc(100% - 2em);
-      max-width: 600px;
-      height: 80px;
-      padding: 0.7em;
-      font-size: 1rem;
-      border: 1px solid var(--border-color);
-      border-radius: 10px;
-      resize: vertical;
-      box-sizing: border-box;
-      background: #fff;
+      background: #2196f3;
     }
     #output {
-      background: #fff8f0;
+      background: #f5fbff;
       border: 2px dashed var(--accent-color);
       padding: 1em;
       border-radius: 12px;
@@ -103,13 +91,10 @@
       max-width: 600px;
       min-height: 4em;
       font-size: 1rem;
-      color: #5c4433;
-    }
-    #review-links {
-      margin-top: 2em;
+      color: #333;
     }
     .badge {
-      background: #f0e0c0;
+      background: #bbdefb;
       margin: 2px;
       padding: 4px 8px;
       border-radius: 8px;
@@ -120,7 +105,7 @@
       padding: 0.6em;
       border-radius: 8px;
       border: 2px solid var(--border-color);
-      background: #fffaf2;
+      background: #e8f4fd;
       width: 80%;
       max-width: 320px;
       color: var(--text-color);
@@ -128,7 +113,7 @@
     select:focus {
       outline: none;
       border-color: var(--accent-color);
-      background: #fff6e8;
+      background: #f0f8ff;
     }
   </style>
 </head>
@@ -136,7 +121,7 @@
 
 <div class="top-hero">
   <div class="top-icon">
-    <img src="neutral.png" alt="中性アイコン" />
+    <img src="male.png" alt="男性アイコン" />
   </div>
   <h1 class="top-title">口コミアシスタント</h1>
   <div class="top-sub">カンタン操作で、あなたの想いを届けやすく。</div>
@@ -144,7 +129,6 @@
 
 <div class="select-box">
   <h2>スタッフ名</h2>
-  <p style="font-size: 0.85rem; color: #777;">スタッフをお選びください。</p>
   <select id="staff-select">
     <option value="">選択してください</option>
     <option value="横田">横田</option>
@@ -157,7 +141,6 @@
 
 <div class="select-box">
   <h2>施術後に感じたこと</h2>
-  <p style="font-size: 0.85rem; color: #777;">※最大3つまで選択できます。</p>
   <select id="impression-select" multiple style="height: 8em;">
     <option value="コリに的確">コリに的確</option>
     <option value="力強い">力強い</option>
@@ -171,7 +154,6 @@
 
 <div class="select-box">
   <h2>口コミの口調を選ぶ</h2>
-  <p style="font-size: 0.85rem; color: #777;">選んだ口調で口コミが生成されます。</p>
   <select id="tone-select">
     <option value="ですます調" selected>ですます調</option>
     <option value="カジュアル">カジュアル</option>
@@ -182,10 +164,6 @@
 
 <div class="select-box">
   <h2>口コミ作成・コピー</h2>
-  <p style="font-size: 0.85rem; color: #777;">
-    自動で口コミを生成します。<br>
-    コピーを押すと投稿リンクが出現します。
-  </p>
   <div class="flex-buttons">
     <button class="button-orange" onclick="generateReview()">口コミを作成する</button>
     <button class="button-orange" onclick="copyReview()">コピーする</button>
@@ -193,24 +171,14 @@
   <div id="output"></div>
 </div>
 
-<div id="review-links" class="select-box" style="display:none;">
-  <h2>口コミを投稿する</h2>
-  <p style="font-size: 0.85rem; color: #777;">コピー後に、該当する端末用リンクから投稿できます。</p>
-  <div class="flex-buttons">
-    <a href="https://www.google.co.jp/search?q=もみ徳姪浜店+クチコミ" target="_blank" class="button-orange">Android用</a>
-    <a href="https://www.google.com/gasearch?q=もみ徳姪浜店+レビュー&source=sh/x/gs/m2/5#ebo=1" target="_blank" class="button-orange">iPhone用</a>
-  </div>
-  <p style="font-size: 0.75rem; color: #888; margin-top: 0.5em;">※iPhoneの方は先に「★（星）」をタップしてください。</p>
-</div>
-
 <script>
-const neutralPhrases = {
-  "コリに的確": ["気になっていたポイントにぴったり届きました。", "コリをしっかり捉えてくれる施術でした。", "必要なところに自然とアプローチしてもらえました。"],
-  "力強い": ["適度な力加減で、安心して受けられました。", "深いところまで無理なくほぐしてもらえました。", "しっかり効かせてくれる心地よい施術でした。"],
-  "動作が楽に": ["動きがスムーズになったのを実感しました。", "身体が軽くなったような感覚がありました。", "自然と動きやすさが戻った気がします。"],
-  "スッキリ": ["心も身体もスッと軽くなった気がします。", "施術後、とても爽やかな気分になりました。", "全身がリフレッシュされたように感じました。"],
-  "丁寧な接客": ["一つひとつの対応がとても丁寧で安心できました。", "落ち着いた雰囲気でリラックスできました。", "こちらのペースに合わせたやさしい接客でした。"],
-  "ワザが凄い": ["体に合わせた的確な施術をしてもらえました。", "手技のひとつひとつに熟練の技を感じました。", "自然に体がほぐれていくのがわかりました。"]
+const malePhrases = {
+  "コリに的確": ["ピンポイントでほぐしてくれる感覚がありました。", "狙ってほしいところにしっかり当たる感じがして気持ちよかったです。", "深いところに届いてるのがわかる施術でした。"],
+  "力強い": ["しっかり圧が入って、効いてる感覚がありました。", "無理なく、でも確実に効かせてくれる力加減でした。", "体の奥まで届くような力強さがあって安心感がありました。"],
+  "動作が楽に": ["終わったあと、肩まわりがスッと軽くなっていて驚きました。", "体の動きが滑らかになった気がします。", "自然と姿勢が良くなる感覚がありました。"],
+  "スッキリ": ["余計な力が抜けて、気持ちよくなりました。", "頭も体もスッキリした感じがしてリフレッシュできました。", "モヤモヤが晴れたようなスッキリ感がありました。"],
+  "丁寧な接客": ["落ち着いた接客で、安心して任せられました。", "説明や対応も丁寧で、リラックスできる雰囲気でした。", "気配りが行き届いていて、信頼できる対応でした。"],
+  "ワザが凄い": ["手の動きに無駄がなく、技術の高さを感じました。", "体の状態を把握してる感じがして、ワザの効きがすごかったです。", "的確にほぐしてくれる技術に感動しました。"]
 };
 
 const impressionSelect = document.getElementById("impression-select");
@@ -234,27 +202,28 @@ function generateReview() {
   const therapist = document.getElementById("staff-select").value || "不明";
   const tone = document.getElementById("tone-select").value;
   const selected = Array.from(impressionSelect.selectedOptions).map(opt => opt.value);
-  const freeInput = document.getElementById("free-input")?.value.trim();
+
   const phrases = selected.map(item => {
-    const list = neutralPhrases[item];
+    const list = malePhrases[item];
     return list ? list[Math.floor(Math.random() * list.length)] : item;
   });
 
-  let review = (therapist === "不明" ? "施術を受けました。" : `${therapist}さんの施術を受けました。`) + "\n";
-  review += phrases.join(" ") + "\n";
-
-  const outro = {
+  let outro = {
     "ですます調": "またお願いしたいと思います。",
     "カジュアル": "また行きたいなーって思いました！",
-    "フレンドリー": "またお願いしまーす！",
+    "フレンドリー": [
+      "またお願いしたいっす！",
+      "またぜひよろしくです！",
+      "また行きたいっすね！",
+      "次もぜひ頼みたいっす！",
+      "またお世話になりたいっす！"
+    ][Math.floor(Math.random() * 5)],
     "しっかり敬語": "次回もぜひお願いしたく存じます。"
   }[tone] || "";
 
+  let review = `${therapist}さんの施術を受けました。\n`;
+  review += phrases.join(" ") + "\n";
   review += outro;
-
-  if (freeInput) {
-    review += "\n" + freeInput;
-  }
 
   document.getElementById("output").textContent = review;
 }
@@ -264,7 +233,6 @@ function copyReview() {
   if (reviewText) {
     navigator.clipboard.writeText(reviewText).then(() => {
       alert("コピーしました！");
-      document.getElementById("review-links").style.display = "block";
     });
   }
 }
@@ -272,3 +240,4 @@ function copyReview() {
 
 </body>
 </html>
+
