--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>もみ徳｜口コミアシスタント（男性版・ブルーカラー）</title>
+  <title>もみ徳｜口コミアシスタント（女性版・ピンクカラー）</title>
   <style>
     :root {
-      --main-color: #64b5f6;
-      --accent-color: #42a5f5;
-      --bg-color: #f0f8ff;
-      --text-color: #333;
-      --light-bg: #e3f2fd;
-      --border-color: #90caf9;
+      --main-color: #f48fb1;
+      --accent-color: #ec407a;
+      --bg-color: #fff0f5;
+      --text-color: #5c444a;
+      --light-bg: #fff5f8;
+      --border-color: #f8bbd0;
     }
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
@@ -79,10 +79,22 @@
       min-width: 120px;
     }
     .button-orange:hover {
-      background: #2196f3;
+      background: #d81b60;
+    }
+    #free-input {
+      width: calc(100% - 2em);
+      max-width: 600px;
+      height: 80px;
+      padding: 0.7em;
+      font-size: 1rem;
+      border: 1px solid var(--border-color);
+      border-radius: 10px;
+      resize: vertical;
+      box-sizing: border-box;
+      background: #fff;
     }
     #output {
-      background: #f5fbff;
+      background: #fff8fb;
       border: 2px dashed var(--accent-color);
       padding: 1em;
       border-radius: 12px;
@@ -91,10 +103,13 @@
       max-width: 600px;
       min-height: 4em;
       font-size: 1rem;
-      color: #333;
+      color: #5c444a;
+    }
+    #review-links {
+      margin-top: 2em;
     }
     .badge {
-      background: #bbdefb;
+      background: #ffd7e0;
       margin: 2px;
       padding: 4px 8px;
       border-radius: 8px;
@@ -105,7 +120,7 @@
       padding: 0.6em;
       border-radius: 8px;
       border: 2px solid var(--border-color);
-      background: #e8f4fd;
+      background: #fffafc;
       width: 80%;
       max-width: 320px;
       color: var(--text-color);
@@ -113,22 +128,25 @@
     select:focus {
       outline: none;
       border-color: var(--accent-color);
-      background: #f0f8ff;
+      background: #fff0f5;
     }
   </style>
 </head>
 <body>
 
+<!-- HERO -->
 <div class="top-hero">
   <div class="top-icon">
-    <img src="male.png" alt="男性アイコン" />
+    <img src="female.png" alt="女性アイコン" />
   </div>
   <h1 class="top-title">口コミアシスタント</h1>
   <div class="top-sub">カンタン操作で、あなたの想いを届けやすく。</div>
 </div>
 
+<!-- スタッフ選択 -->
 <div class="select-box">
   <h2>スタッフ名</h2>
+  <p style="font-size: 0.85rem; color: #777;">スタッフをお選びください。</p>
   <select id="staff-select">
     <option value="">選択してください</option>
     <option value="横田">横田</option>
@@ -139,8 +157,10 @@
   </select>
 </div>
 
+<!-- 施術後に感じたこと -->
 <div class="select-box">
   <h2>施術後に感じたこと</h2>
+  <p style="font-size: 0.85rem; color: #777;">※最大3つまで選択できます。</p>
   <select id="impression-select" multiple style="height: 8em;">
     <option value="コリに的確">コリに的確</option>
     <option value="力強い">力強い</option>
@@ -152,8 +172,10 @@
   <div id="impression-display" style="margin-top: 1em; font-size: 0.9rem;"></div>
 </div>
 
+<!-- 口コミ口調選択 -->
 <div class="select-box">
   <h2>口コミの口調を選ぶ</h2>
+  <p style="font-size: 0.85rem; color: #777;">選んだ口調で口コミが生成されます。</p>
   <select id="tone-select">
     <option value="ですます調" selected>ですます調</option>
     <option value="カジュアル">カジュアル</option>
@@ -162,8 +184,13 @@
   </select>
 </div>
 
+<!-- 口コミ作成・コピー -->
 <div class="select-box">
   <h2>口コミ作成・コピー</h2>
+  <p style="font-size: 0.85rem; color: #777;">
+    自動で口コミを生成します。<br>
+    コピーを押すと投稿リンクが出現します。
+  </p>
   <div class="flex-buttons">
     <button class="button-orange" onclick="generateReview()">口コミを作成する</button>
     <button class="button-orange" onclick="copyReview()">コピーする</button>
@@ -171,14 +198,25 @@
   <div id="output"></div>
 </div>
 
+<!-- 口コミ投稿案内 -->
+<div id="review-links" class="select-box" style="display:none;">
+  <h2>口コミを投稿する</h2>
+  <p style="font-size: 0.85rem; color: #777;">コピー後に、該当する端末用リンクから投稿できます。</p>
+  <div class="flex-buttons">
+    <a href="https://www.google.co.jp/search?q=もみ徳姪浜店+クチコミ" target="_blank" class="button-orange">Android用</a>
+    <a href="https://www.google.com/gasearch?q=もみ徳姪浜店+レビュー&source=sh/x/gs/m2/5#ebo=1" target="_blank" class="button-orange">iPhone用</a>
+  </div>
+  <p style="font-size: 0.75rem; color: #888; margin-top: 0.5em;">※iPhoneの方は先に「★（星）」をタップしてください。</p>
+</div>
+
 <script>
-const malePhrases = {
-  "コリに的確": ["ピンポイントでほぐしてくれる感覚がありました。", "狙ってほしいところにしっかり当たる感じがして気持ちよかったです。", "深いところに届いてるのがわかる施術でした。"],
-  "力強い": ["しっかり圧が入って、効いてる感覚がありました。", "無理なく、でも確実に効かせてくれる力加減でした。", "体の奥まで届くような力強さがあって安心感がありました。"],
-  "動作が楽に": ["終わったあと、肩まわりがスッと軽くなっていて驚きました。", "体の動きが滑らかになった気がします。", "自然と姿勢が良くなる感覚がありました。"],
-  "スッキリ": ["余計な力が抜けて、気持ちよくなりました。", "頭も体もスッキリした感じがしてリフレッシュできました。", "モヤモヤが晴れたようなスッキリ感がありました。"],
-  "丁寧な接客": ["落ち着いた接客で、安心して任せられました。", "説明や対応も丁寧で、リラックスできる雰囲気でした。", "気配りが行き届いていて、信頼できる対応でした。"],
-  "ワザが凄い": ["手の動きに無駄がなく、技術の高さを感じました。", "体の状態を把握してる感じがして、ワザの効きがすごかったです。", "的確にほぐしてくれる技術に感動しました。"]
+const femalePhrases = {
+  "コリに的確": ["気になるところに的確にアプローチしてくれました。", "ポイントをしっかりとらえた施術でした。", "ピンポイントで効いてとても楽になりました。"],
+  "力強い": ["しっかり圧が入っていて、とても満足でした。", "深いところまで届くような力加減でした。", "強め希望だったので、ちょうどよかったです。"],
+  "動作が楽に": ["施術後、体が軽くなって動きやすくなりました。", "肩や腰が楽になり、スムーズに動けるようになりました。", "体がふわっと軽くなった感覚がありました。"],
+  "スッキリ": ["心も体もスッキリしました。", "施術後、頭も体もリフレッシュできました。", "全身がリセットされたような感じでした。"],
+  "丁寧な接客": ["とても丁寧な対応で、リラックスできました。", "安心して施術を受けられる雰囲気でした。", "笑顔で優しく接してくださり、心地よかったです。"],
+  "ワザが凄い": ["手技の繊細さと力強さに感動しました。", "経験豊富な施術だとすぐにわかる技術でした。", "体の状態を理解した上で施術してくださっていると感じました。"]
 };
 
 const impressionSelect = document.getElementById("impression-select");
@@ -202,28 +240,27 @@ function generateReview() {
   const therapist = document.getElementById("staff-select").value || "不明";
   const tone = document.getElementById("tone-select").value;
   const selected = Array.from(impressionSelect.selectedOptions).map(opt => opt.value);
-
+  const freeInput = document.getElementById("free-input")?.value.trim();
   const phrases = selected.map(item => {
-    const list = malePhrases[item];
+    const list = femalePhrases[item];
     return list ? list[Math.floor(Math.random() * list.length)] : item;
   });
 
-  let outro = {
+  let review = (therapist === "不明" ? "施術を受けました。" : `${therapist}さんの施術を受けました。`) + "\n";
+  review += phrases.join(" ") + "\n";
+
+  const outro = {
     "ですます調": "またお願いしたいと思います。",
     "カジュアル": "また行きたいなーって思いました！",
-    "フレンドリー": [
-      "またお願いしたいっす！",
-      "またぜひよろしくです！",
-      "また行きたいっすね！",
-      "次もぜひ頼みたいっす！",
-      "またお世話になりたいっす！"
-    ][Math.floor(Math.random() * 5)],
+    "フレンドリー": "また行きたいなぁって思いました♪",
     "しっかり敬語": "次回もぜひお願いしたく存じます。"
   }[tone] || "";
 
-  let review = `${therapist}さんの施術を受けました。\n`;
-  review += phrases.join(" ") + "\n";
   review += outro;
+
+  if (freeInput) {
+    review += "\n" + freeInput;
+  }
 
   document.getElementById("output").textContent = review;
 }
@@ -233,6 +270,7 @@ function copyReview() {
   if (reviewText) {
     navigator.clipboard.writeText(reviewText).then(() => {
       alert("コピーしました！");
+      document.getElementById("review-links").style.display = "block";
     });
   }
 }
