--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
     <span>女性</span>
   </a>
   <a href="neutral.html" class="gender-button">
-    <img src="natural.png" alt="選択しない">
-    <span>選択しない</span>
+    <img src="neutral.png" alt="選択しない">
+    <span>選択しneutral</span>
   </a>
 </div>
 
