--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   </a>
   <a href="neutral.html" class="gender-button">
     <img src="neutral.png" alt="選択しない">
-    <span>選択しneutral</span>
+    <span>中性</span>
   </a>
 </div>
 
